# alzheimers_microglia_meta_analysis

./: .env.example  .gitignore  CHANGELOG.md  NEXT_STEPS.md  PLOT_MANAGEMENT.md  PROJECT_STRUCTURE.txt  README.md  RESTRUCTURE_SUMMARY.md  environment.yml  pyproject.toml  quick_test.py  run_pipeline.py  setup.py  test_pipeline.py
config/: analysis_params.yaml  datasets.yaml
docs/: analysis_protocol.md  installation.md  migration_guide.md
scripts/: 01_download_data.py  02_preprocess_data.py  03_annotate_cells.py  04_integrate_datasets.py  05_analyze_activation_states.py  06_run_meta_analysis.py  run_full_pipeline.py
scripts/analysis/: 01_activation_states.py  01_annotate_cells.py  02_activation_states.py  02_meta_analysis.py
scripts/integration/: 01_integrate_datasets.py
scripts/preprocessing/: 02_preprocess_data.py
scripts/utils/: __init__.py
src/ad_microglia/: __init__.py
src/ad_microglia/analysis/: __init__.py  cell_annotation.py  meta_analysis.py
src/ad_microglia/config/: __init__.py  settings.py
src/ad_microglia/data/: __init__.py  download.py  preprocessing.py
src/ad_microglia/integration/: __init__.py
src/ad_microglia/utils/: __init__.py  plot_manager.py
tests/: __init__.py  conftest.py
