[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ad-microglia"
version = "0.1.0"
description = "Meta-analysis toolkit for Alzheimer's disease microglia single-cell RNA-seq studies"
readme = "README.md"
authors = [
    {name = "AD Microglia Research Team"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "scipy>=1.9.0",
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
    "scanpy>=1.9.0",
    "anndata>=0.8.0",
    "scvi-tools>=1.0.0",
    "scanorama>=1.7.0",
    "celltypist>=1.6.0",
    "decoupler>=1.4.0",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.1.0",
    "GEOparse>=2.0.3",
    "requests>=2.28.0",
    "tqdm>=4.64.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "ipython>=8.0",
    "jupyter>=1.0",
]

docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/alzheimers_microglia_meta_analysis"
Documentation = "https://github.com/yourusername/alzheimers_microglia_meta_analysis/docs"
Repository = "https://github.com/yourusername/alzheimers_microglia_meta_analysis"

[project.scripts]
ad-microglia = "ad_microglia.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ad_microglia = ["config/*.yaml", "config/*.yml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
